--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -41,6 +41,8 @@ on early-init
 
 on init
 
+    export LD_SHIM_LIBS /system/lib/hw/camera.msm8937.so|libshims_camera.so:/system/vendor/lib/hw/camera.msm8937.so|libshims_camera.so:/system/bin/mm-qcamera-daemon|libshims_camera.so
+
     # Set permissions for persist partition
     mkdir /persist 0771 root system
 
