--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -39,6 +39,9 @@ on early-init
     mount debugfs debugfs /sys/kernel/debug
     chmod 0755 /sys/kernel/debug
 
+    #Setup ZRAM
+    write /proc/sys/vm/page-cluster 0
+
 on init
 
     export LD_SHIM_LIBS /system/lib/hw/camera.msm8937.so|libshims_camera.so:/system/vendor/lib/hw/camera.msm8937.so|libshims_camera.so:/system/bin/mm-qcamera-daemon|libshims_camera.so
