--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -44,6 +44,8 @@ on early-init
 
 on init
 
+    export LD_SHIM_LIBS /system/vendor/lib/libmmcamera2_imglib_modules.so|libshim_atomic.so
+
     # Set permissions for persist partition
     mkdir /persist 0771 root system
 
