land: add mm-qcamera shims
Change-Id: Iffa5ead75ba391a9f62ff9e947e5d5deecad5e8c
Signed-off-by: klozz <klozz707@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -44,7 +44,7 @@ on early-init
 
 on init
 
-    export LD_SHIM_LIBS /system/vendor/lib/libmmcamera2_imglib_modules.so|libshim_atomic.so:system/bin/mm-qcamera-daemon|libshims_camera.so
+    export LD_SHIM_LIBS /system/vendor/lib/libmmcamera2_imglib_modules.so|libshim_atomic.so:system/bin/mm-qcamera-daemon|libshim_qcamera.so:system/bin/mm-qcamera-daemon|libshim_camera.so
 
     # Set permissions for persist partition
     mkdir /persist 0771 root system
