--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -756,9 +756,11 @@ on property:persist.sys.fp.vendor=goodix
     setprop ro.boot.fpsensor gdx
     setprop ro.hardware.fingerprint goodix
     setprop persist.sys.fp.onstart=0
+    start fps_hal
 
 on property:persist.sys.fp.onstart=0
    start gx_fpd
+   start fps_hal
 
 on property:persist.sys.fp.onstart=1
    start fps_hal
