--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -682,7 +682,7 @@ service hcidump /system/bin/sh /system/etc/hcidump.sh
     disabled
     oneshot
 
-service charger /charger
+service charger /sbin/chargeonlymode
     class charger
     group graphics system
     seclabel u:r:healthd:s0
@@ -874,11 +874,10 @@ on property:init.svc.zygote=restarting
     stop ppd
 
 on charger
-    wait /dev/block/bootdevice/by-name/system
-    mount ext4 /dev/block/bootdevice/by-name/system /system ro barrier=1
     setprop persist.sys.usb.config mass_storage
     setprop persist.sys.usb.config mass_storage
     start hvdcp_opti
+    start thermal-engine
 
 service hbtp /vendor/bin/hbtp_daemon
     class main
