--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -609,6 +609,8 @@ on property:persist.sys.chgdisabled=0
 
 on property:vold.decrypt=trigger_restart_framework
     start wcnss-service
+    stop camera-provider-2-4
+    start camera-provider-2-4
 
 on property:persist.env.fastdorm.enabled=true
     setprop persist.radio.data_no_toggle 1
