--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -6,7 +6,7 @@ on boot
     # Update foreground and background cpusets
     # Reserve CPU 7 for the top app
     write /dev/cpuset/foreground/cpus 0-7
-    write /dev/cpuset/foreground/boost/cpus 0-3
+    write /dev/cpuset/foreground/boost/cpus 0-6
     write /dev/cpuset/background/cpus 4-5
     write /dev/cpuset/system-background/cpus 4-6
     write /dev/cpuset/top-app/cpus 0-7
@@ -213,6 +213,7 @@ on charger
 
     write /sys/module/lpm_levels/parameters/sleep_disabled 0
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
+    start hvdcp_opti
 
 on property:init.svc.recovery=running
     trigger enable-low-power
