--- a/rootdir/etc/init.qcom.usb.rc
+++ b/rootdir/etc/init.qcom.usb.rc
@@ -42,6 +42,7 @@ service qcom-usb-sh /vendor/bin/sh /vendor/bin/init.qcom.usb.sh
     class core
     user root
     oneshot
+    seclabel u:r:qti_init_shell_exec:s0
 
 # Following are the parameters required for usb functionality. They provide configurable options like
 # product_id/vendor id and allows specifying required functions:
