land: TARGET_USES_QTI_CAMERA_DEVICE
* fix perfd

Signed-off-by: klozz <klozz707@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -781,10 +781,7 @@ service qseecomd /vendor/bin/qseecomd
 service perfd /vendor/bin/perfd
     class main
     user root
-    group root readproc
-    socket perfd seqpacket 0666 root system
-    disabled
-#    writepid /dev/cpuset/system-background/tasks
+    group root system
 
 service thermal-engine /vendor/bin/thermal-engine 
     class main
