--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -228,6 +228,8 @@ on property:sys.shutdown.requested=*
     # We chown/chmod /persist again so because mount is run as root + defaults
     chown root system /persist
     chmod 0771 /persist
+	chown system system /persist/WCNSS_qcom_wlan_nv.bin
+	chown system system /vendor//firmware/wlan/prima/WCNSS_qcom_wlan_nv.bin
     chmod 0664 /sys/devices/platform/msm_sdcc.1/polling
     chmod 0664 /sys/devices/platform/msm_sdcc.2/polling
     chmod 0664 /sys/devices/platform/msm_sdcc.3/polling
@@ -592,7 +594,7 @@ service start_hci_filter /vendor/bin/wcnss_filter
     class late_start
     user bluetooth
     group bluetooth diag system wakelock
-    seclabel u:r:wcnss_filter:s0
+    seclabel u:r:bluetooth:s0
     disabled
 
 #FM
@@ -633,7 +635,7 @@ service wpa_supplicant /vendor/bin/hw/wpa_supplicant \
     -I/vendor/etc/wifi/p2p_supplicant_overlay.conf -N \
     -iwlan0 -Dnl80211 -c/data/misc/wifi/wpa_supplicant.conf \
     -I/vendor/etc/wifi/wpa_supplicant_overlay.conf \
-    -O/data/misc/wifi/sockets -puse_p2p_group_interface=1 \
+    -O/data/misc/wifi/sockets -puse_p2p_group_interface=1 -dd \
     -e/data/misc/wifi/entropy.bin -g@android:wpa_wlan0
 #   we will start as root and wpa_supplicant will switch to user wifi
 #   after setting up the capabilities required for WEXT
@@ -650,11 +652,10 @@ service loc_launcher /vendor/bin/loc_launcher
     group gps inet diag wifi
     seclabel u:r:location:s0
 
-service qcom-sh /vendor/bin/sh /vendor/bin/init.qcom.sh
+service qcom-sh /vendor/bin/init.qcom.sh
     class late_start
     user root
     oneshot
-    seclabel u:r:qti_init_shell_exec:s0
 
 service ril-daemon2 /vendor/bin/hw/rild -c 2
     class main
@@ -804,7 +805,6 @@ service wcnss-service /vendor/bin/wcnss_service
     user system
     group system wifi radio
     oneshot
-    seclabel u:r:wcnss_service:s0
 
 #IMS
 service imsqmidaemon /vendor/bin/imsqmidaemon
