Revert "land: get rid of mm-qcamera-daemon"
This reverts commit 8f1abe3483dbcc43fed84690800b4c2356adbeeb.

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -759,11 +759,11 @@ on property:persist.sys.fp.onstart=1
    start fps_hal
 
 # Start camera server as daemon
-#service qcamerasvr /vendor/bin/mm-qcamera-daemon
-#    class late_start
-#    user camera
-#    group camera system inet input graphics
-#    seclabel u:r:mm-qcamerad:s0
+service qcamerasvr /vendor/bin/mm-qcamera-daemon
+    class late_start
+    user camera
+    group camera system inet input graphics
+    seclabel u:r:mm-qcamerad:s0
 #    writepid /dev/cpuset/system-background/tasks
 
 # Allow usb charging to be disabled peristently
