land: move camera shim to LD_PRELOAD and remove not needed shims
http://jjmora.es/sabias-que-la-variable-ld_preload/

Signed-off-by: klozz <shaclone707@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -764,6 +764,7 @@ service qcamerasvr /vendor/bin/mm-qcamera-daemon
     user camera
     group camera system inet input graphics
     seclabel u:r:mm-qcamerad:s0
+    setenv LD_PRELOAD "vendor/lib/libshim_qcamera"
 #    writepid /dev/cpuset/system-background/tasks
 
 # Allow usb charging to be disabled peristently
