--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -764,7 +764,7 @@ service qcamerasvr /vendor/bin/mm-qcamera-daemon
     user camera
     group camera system inet input graphics
     seclabel u:r:mm-qcamerad:s0
-    setenv LD_PRELOAD "vendor/lib/libshim_qcamera"
+    setenv LD_PRELOAD "vendor/lib/libshim_qcamera.so"
 #    writepid /dev/cpuset/system-background/tasks
 
 # Allow usb charging to be disabled peristently
