--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -22,8 +22,8 @@ on boot
     chmod 0664 /dev/cpuset/camera-daemon/tasks
 
     # Switch one core to interactive to set permissions, for power hal and system server.
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "interactive"
-    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor "interactive"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "lisi"
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor "Alessa"
     chown system system /dev/cpuctl/cpu.notify_on_migrate
     chmod 0660 /dev/cpuctl/cpu.notify_on_migrate
     chown root system /sys/devices/system/cpu/cpu1/online
@@ -193,7 +193,7 @@ on enable-low-power
     write /sys/block/dm-0/queue/read_ahead_kb 128
 
     rm /data/system/perfd/default_values
-    # Tell perfd that we're ready to go
+    # Tell perfd that were ready to go
     setprop sys.post_boot.parsed 1
 
 on class_start:late_start
