land:[init.target]: Starting imsrtpd on bootup * starting rtpd  on bootup without waiting for DATA_DAEMON prop and restarting when property is set
Signed-off-by: klozz <shaclone707@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -916,7 +916,7 @@ service vendor.imsrcsservice /vendor/bin/imsrcsd
      #seclabel u:r:ims:s0
 
 on property:vendor.ims.DATA_DAEMON_STATUS=1
-   start vendor.ims_rtp_daemon
+   restart vendor.ims_rtp_daemon
    start vendor.imsrcsservice
 
 #IMS
