land:execute qcom-sh on after boot complete to avoid rewrited configs
Signed-off-by: klozz <shaclone707@gmail.com>

--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -236,3 +236,4 @@ on property:init.svc.recovery=running
 on property:dev.bootcomplete=1
     setprop sys.io.scheduler bfq
 	trigger enable-low-power
+	qcom-sh
