--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -22,8 +22,8 @@ on boot
     write /dev/cpuset/application/cpus 1,3
 
     # Switch one core to interactive to set permissions, for power hal and system server.
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "lisi"
-    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor "Alessa"
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "schedutil"
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor "schedutil"
     chown system system /dev/cpuctl/cpu.notify_on_migrate
     chmod 0660 /dev/cpuctl/cpu.notify_on_migrate
     chown root system /sys/devices/system/cpu/cpu1/online
@@ -52,11 +52,7 @@ on boot
     restorecon -R /sys/devices/system/cpu
 
 on enable-low-power
-    # HMP scheduler (big.Little cluster related) settings
-    write /proc/sys/kernel/sched_window_stats_policy 3
-    write /proc/sys/kernel/sched_ravg_hist_size 3
-    write /proc/sys/kernel/sched_ravg_window 20000000
-
+ 
     write /sys/class/devfreq/soc:qcom,mincpubw/governor "cpufreq"
     write /sys/class/devfreq/soc:qcom,cpubw/governor "bw_hwmon"
     write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/io_percent 20
@@ -80,7 +76,6 @@ on enable-low-power
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/hispeed_freq 960000
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/io_is_busy 0
     write /sys/devices/system/cpu/cpu0/cpufreq/interactive/target_loads "45 960000:85"
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/min_sample_time 40000
     #write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 422400
     #write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1497600
 
@@ -99,17 +94,6 @@ on enable-low-power
 
     restorecon -R /sys/devices/system/cpu
 
-    # HMP Task packing settings
-    write /proc/sys/kernel/sched_small_task 20
-    write /sys/devices/system/cpu/cpu0/sched_mostly_idle_load 30
-    write /sys/devices/system/cpu/cpu1/sched_mostly_idle_load 30
-    write /sys/devices/system/cpu/cpu2/sched_mostly_idle_load 30
-    write /sys/devices/system/cpu/cpu3/sched_mostly_idle_load 30
-    write /sys/devices/system/cpu/cpu4/sched_mostly_idle_load 30
-    write /sys/devices/system/cpu/cpu5/sched_mostly_idle_load 30
-    write /sys/devices/system/cpu/cpu6/sched_mostly_idle_load 30
-    write /sys/devices/system/cpu/cpu7/sched_mostly_idle_load 30
-
     # task packing settings
     write /sys/devices/system/cpu/cpu0/sched_static_cpu_pwr_cost 0
     write /sys/devices/system/cpu/cpu1/sched_static_cpu_pwr_cost 0
@@ -120,24 +104,27 @@ on enable-low-power
     write /sys/devices/system/cpu/cpu6/sched_static_cpu_pwr_cost 0
     write /sys/devices/system/cpu/cpu7/sched_static_cpu_pwr_cost 0
 
-    write /sys/devices/system/cpu/cpu0/sched_mostly_idle_nr_run 3
-    write /sys/devices/system/cpu/cpu1/sched_mostly_idle_nr_run 3
-    write /sys/devices/system/cpu/cpu2/sched_mostly_idle_nr_run 3
-    write /sys/devices/system/cpu/cpu3/sched_mostly_idle_nr_run 3
-    write /sys/devices/system/cpu/cpu4/sched_mostly_idle_nr_run 3
-    write /sys/devices/system/cpu/cpu5/sched_mostly_idle_nr_run 3
-    write /sys/devices/system/cpu/cpu6/sched_mostly_idle_nr_run 3
-    write /sys/devices/system/cpu/cpu7/sched_mostly_idle_nr_run 3
-
     # Disable L2-GDHS low power modes
     write /sys/module/lpm_levels/system/pwr/pwr-l2-gdhs/idle_enabled N
     write /sys/module/lpm_levels/system/pwr/pwr-l2-gdhs/suspend_enabled N
     write /sys/module/lpm_levels/system/perf/perf-l2-gdhs/idle_enabled N
     write /sys/module/lpm_levels/system/perf/perf-l2-gdhs/suspend_enabled N
 
-    # if EAS is present, switch to sched governor (no effect if not EAS)
+    # if EAS is present, switch to sched governor (no effect if not EAS) Adjust to correct msm8996 have 4cores 2 big 2 little 
+    # Here we have 4 little 4 big
+    # enable governor for perf cluster
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "schedutil"
-    write /sys/devices/system/cpu/cpu2/cpufreq/scaling_governor "schedutil"
+    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/rate_limit_us 0
+    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/hispeed_freq 1094400
+    #default value for hispeed_load is 90, for 8937 it should be 85
+    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/hispeed_load 85
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 960000
+    ## enable governor for power cluster
+    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor "schedutil"
+    write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/rate_limit_us 0
+    write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/hispeed_freq 768000
+    write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/hispeed_load 85
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 768000
 
     # Bring all cores online
     write /sys/devices/system/cpu/cpu1/online 1
@@ -169,14 +156,6 @@ on enable-low-power
     write /proc/sys/kernel/sched_upmigrate 85
     write /proc/sys/kernel/sched_downmigrate 55
     write /proc/sys/kernel/sched_boost 1
-
-    # Enable sched guided freq control
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_sched_load 1
-    write /sys/devices/system/cpu/cpu0/cpufreq/interactive/use_migration_notif 1
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/use_sched_load 1
-    write /sys/devices/system/cpu/cpu4/cpufreq/interactive/use_migration_notif 1
-    write /proc/sys/kernel/sched_freq_inc_notify 50000
-    write /proc/sys/kernel/sched_freq_dec_notify 50000
 
     # Enable dynamic clock gating
     write /sys/module/lpm_levels/lpm_workarounds/dynamic_clock_gating 1
