--- a/Biometrics/android.hardware.biometrics.fingerprint@2.0-service.xiaomi_land.rc
+++ b/Biometrics/android.hardware.biometrics.fingerprint@2.0-service.xiaomi_land.rc
@@ -1,10 +1,8 @@
-service vendor.fps_hal /vendor/bin/hw/android.hardware.biometrics.fingerprint@2.1-service.land
+service fps_hal /vendor/bin/hw/android.hardware.biometrics.fingerprint@2.0-service.xiaomi_mido
     # "class hal" causes a race condition on some devices due to files created
     # in /data. As a workaround, postpone startup until later in boot once
     # /data is mounted.
     class late_start
-    socket fpce stream 0666 system system
     user system
-    group system sdcard_rw input
-    system system
+    group system input
     disabled
