land: use ro.crypto.state to handle non encrypted device and restar wifi and camera services
Signed-off-by: klozz <shaclone707@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -616,8 +616,8 @@ on property:vold.decrypt=trigger_restart_framework
     stop vendor.wifi_hal_legacy
     start vendor.wifi_hal_legacy
 
-#idk if the system declares this as vendor at the moment when i write this im not checket yet
-on nonencrypted
+#restart wifi and camera services in non encrypted devices 
+on property:ro.crypto.state=unencrypted
     stop vendor.camera-provider-2-4
     start vendor.camera-provider-2-4
     stop vendor.wifi_hal_legacy
